# rustedclaw

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE-MIT  PR_DESCRIPTION.md  README.md  docker-compose.yml  user_info.txt
.github/workflows/: bench.yml  ci.yml  local.yml  release.yml
crates/agent/: Cargo.toml
crates/agent/src/: lib.rs  loop_runner.rs  stream_event.rs
crates/agent/src/context/: assembler.rs  mod.rs  token.rs  working_memory.rs
crates/agent/src/patterns/: coordinator.rs  mod.rs  rag.rs  react.rs  test_helpers.rs
crates/channels/: Cargo.toml
crates/channels/src/: cli.rs  discord.rs  lib.rs  registry.rs  slack.rs  telegram.rs  web.rs  webhook.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/commands/: agent.rs  config_cmd.rs  contract.rs  daemon.rs  doctor.rs  estop.rs  gateway.rs  memory.rs  migrate.rs  mod.rs  onboard.rs  providers.rs  routine.rs  status.rs  usage.rs
crates/cli/tests/: e2e_integration.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/contracts/: Cargo.toml
crates/contracts/src/: engine.rs  lib.rs  model.rs  parser.rs
crates/core/: Cargo.toml
crates/core/src/: agent.rs  channel.rs  error.rs  event.rs  identity.rs  lib.rs  memory.rs  message.rs  provider.rs  tool.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: api_v1.rs  frontend.rs  lib.rs
crates/memory/: Cargo.toml
crates/memory/migrations/: 001_create_memories.sql
crates/memory/src/: file_backend.rs  in_memory.rs  lib.rs  noop.rs  postgres.rs  sqlite.rs  vector.rs
crates/providers/: Cargo.toml
crates/providers/src/: anthropic.rs  fallback.rs  lib.rs  local.rs  openai_compat.rs  router.rs
crates/security/: Cargo.toml
crates/security/src/: allowlist.rs  audit.rs  lib.rs  path.rs  secrets.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: engine.rs  lib.rs  model.rs  pricing.rs
crates/tools/: Cargo.toml
crates/tools/src/: calculator.rs  file_read.rs  file_write.rs  http_request.rs  knowledge_base_query.rs  lib.rs  memory_search.rs  shell.rs  wasm_tool.rs  weather_lookup.rs  web_search.rs
crates/workflow/: Cargo.toml
crates/workflow/src/: lib.rs
frontend/: app.js  index.html  style.css
scripts/: benchmark.ps1  benchmark.sh  benchmark_lowend.ps1
