[package]
name = "rustedclaw-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core agent loop for RustedClaw — the Plan-Act-Observe cycle"

[dependencies]
rustedclaw-core = { workspace = true }
rustedclaw-config = { workspace = true }
rustedclaw-providers = { workspace = true }
rustedclaw-memory = { workspace = true }
rustedclaw-tools = { workspace = true }
rustedclaw-contracts = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
