[package]
name = "rustedclaw-channels"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Chat channel implementations for RustedClaw"

[dependencies]
rustedclaw-core = { workspace = true }
rustedclaw-config = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
