[package]
name = "rustedclaw"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
description = "RustedClaw — AI Agent Runtime Infrastructure"

[features]
default = []
local = ["rustedclaw-providers/local"]

[[bin]]
name = "rustedclaw"
path = "src/main.rs"

[dependencies]
rustedclaw-core = { workspace = true }
rustedclaw-config = { workspace = true }
rustedclaw-providers = { workspace = true }
rustedclaw-channels = { workspace = true }
rustedclaw-memory = { workspace = true }
rustedclaw-tools = { workspace = true }
rustedclaw-agent = { workspace = true }
rustedclaw-gateway = { workspace = true }
rustedclaw-workflow = { workspace = true }
rustedclaw-contracts = { workspace = true }
rustedclaw-telemetry = { workspace = true }
clap = { workspace = true }
clap_complete = "4"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
async-trait = { workspace = true }
chrono = { workspace = true }
toml = { workspace = true }
tower = { workspace = true }
axum = { workspace = true }
serde_json = { workspace = true }
http-body-util = "0.1"
