[package]
name = "rustedclaw-contracts"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Agent Contracts — declarative behavior specifications for RustedClaw agents"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
regex = "1"
rustedclaw-core = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
