[package]
name = "rustedclaw-providers"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "LLM provider implementations for RustedClaw"

[dependencies]
rustedclaw-core = { workspace = true }
rustedclaw-config = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
