[package]
name = "rustedclaw-providers"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "LLM provider implementations for RustedClaw"

[features]
default = []
local = ["candle-core", "candle-nn", "candle-transformers", "tokenizers", "hf-hub"]

[dependencies]
rustedclaw-core = { workspace = true }
rustedclaw-config = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# Local inference (optional — behind "local" feature)
candle-core = { workspace = true, optional = true }
candle-nn = { workspace = true, optional = true }
candle-transformers = { workspace = true, optional = true }
tokenizers = { workspace = true, optional = true }
hf-hub = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
