[package]
name = "rustedclaw-telemetry"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Execution tracing, cost tracking and budget enforcement for RustedClaw agents"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
